# raytracer

./: CMakeLists.txt  README.md  run.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
images/: image.ppm
include/: image.h  object.h  ray.h  raytracer.h  vector.h
include/raytracer/: intersection.h  lighting.h  raytracer.h
include/scene/: scene.h  tree.h
include/structures/: colour.h  light.h  material.h  object.h  ray.h
raytracer/: CMakeLists.txt
raytracer/include/: image.h  material.h  scene.h
raytracer/src/: image.c  main.c  raytracer.c  scene.c  vector.c
src/: bvh.c  colour.c  main.c  raytracer.c
src/raytracer/: intersection.c  lighting.c  raytracer.c
src/scene/: scene.c  tree.c
src/structures/: colour.c  vector.c
